fix: center align draggable options in users/edit

--- a/app/assets/stylesheets/users/edit.scss
+++ b/app/assets/stylesheets/users/edit.scss
@@ -570,6 +570,7 @@ body>div>[role="dialog"] .modal-dialog {
   margin-bottom: 5px;
   font-weight: 600;
   display: flex;
+  align-items: center;
   &.dragging {
     opacity: 0.3;
   }
